--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ subjects:
 - !lcsh 'North Dakota -- Poetry'
 - !lcc 'PS'
 - !lcsh 'Poetry'
+- GITenberg
 title: 'In the Land of Dakota: A Little Book of North Dakota Verse'
 url: http://www.gutenberg.org/ebooks/34982
